# omni-usage

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: screenshot.txt
src/omni_usage/: __about__.py  __init__.py  __main__.py  cli.py  collector.py  widget.py
